ST-322 Change `nimpee-net-config` to `ipf-cli-config`

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -230,7 +230,7 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
   - `sshuttle` version has been updated to `1.0.5`
     - This upgrade could potentially impact jumphost connectivity
 - removed jailkit for `osadmin` user
-  - There is still the limitation for changing the `osadmin` account password only via running `nimpee-net-config -t`
+  - There is still the limitation for changing the `osadmin` account password only via running `nimpee-net-config -t`. (Note: In version `6.9`, this command changed to `ipf-cli-config -t`.)
   - CLI users logging in as `osadmin` now have `sudo` access
 
 --8<-- "snippets/cli_root_access.md"
@@ -241,12 +241,12 @@ IP Fabric `5.0.0` includes Phase 1 of RBAC. The most significant change is that 
 - First Boot Wizard Changes
   - For VM initial deployments where console access is not possible, it's now possible to run the First Boot Wizard via SSH
     - Boot the VM, determine the IP address assigned to it from DHCP, and SSH to the VM: `ssh osadmin@<dhcp-learned-ip-address>`
-    - Once logged in, run `nimpee-net-config -a`
+    - Once logged in, run `nimpee-net-config -a`. (Note: In version `6.9`, this command changed to `ipf-cli-config -a`.)
 - [cloud-init](https://cloud-init.io/) preliminary support
   - For users wanting to automate VM installations, `cloud-init` can be used for initial VM provisioning
   - IP address assignment to the VM is supported via `cloud-init`
   - Any other changes via `cloud-init` (users, ssh keys, resizing) may work, but are untested and unsupported
-  - Changing the password for `osadmin` through `cloud-init` is discouraged as it has some implications, use `nimpee-net-config -t` instead
+  - Changing the password for `osadmin` through `cloud-init` is discouraged as it has some implications, use `nimpee-net-config -t` instead. (Note: In version `6.9`, this command changed to `ipf-cli-config -t`.)
   - If you are using auto `cloud-init` via certain cloud providers, note the OpenSSH server will regenerate new public/private keys
 - Added `qemu-guest-agent` for easier monitoring in environments such as OpenStack
 - Entry input validation has been improved in features such as backup, jumphosts, SNMP and certificates
