--- a/docs/releases/release_notes/6.7.md
+++ b/docs/releases/release_notes/6.7.md
@@ -89,7 +89,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - `NULL` values were sometimes treated as the smallest numerical value in filters. This was rectified, and `NULL` values cannot be compared to numerical values anymore (result of comparison will be always `false`).
 - Changed behavior of `Loading Graph cache` Assurance Engine task
   - With this task disabled (to skip topology calculation at the end of discovery and make discovery faster), the Network Viewer (Site Diagrams) and Path Lookup (End to end path, Host to Gateway path) are now still able to load diagrams; they will be just slower as the topology is not cached and needs to be calculated on demand.
-- The NTP configuration step has been removed from the First Boot Wizard (`nimpee-net-config`).
+- The NTP configuration step has been removed from the First Boot Wizard (`nimpee-net-config`). (Note: In version `6.9`, this command changed to `ipf-cli-config`.)
 
 ### 3rd-party Updates
 
