--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -34,4 +34,6 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 - The **Authentication failure** field (how many times to retry a connection
   when it fails on authentication) in **Settings --> Discovery & Snapshots -->
   Discovery Settings --> Advanced CLI** now has an increased maximum value. It
-  can be set up to 5 retries. 
+  can be set up to 5 retries.
+- The `nimpee-net-config` command for the initial configuration has changed to
+  `ipf-cli-config`.
