NIM-13155 6.9 RN - Document added basic device info support for VeloCloud under Experimental Features

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -37,3 +37,13 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   can be set up to 5 retries.
 - The `nimpee-net-config` command for the initial configuration has changed to
   `ipf-cli-config`.
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. If
+you are interested in trying them out, please contact our Support or Solution
+Architect team and we will gladly help you with enabling these features.
+
+- VeloCloud
+  - Basic device info support was added as PoC and needs to be enabled manually.
+    (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`)
