NIM-14908 6.9 RN - Add note regarding renamed jumphost services

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -37,6 +37,8 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   can be set up to 5 retries.
 - The `nimpee-net-config` command for the initial configuration has changed to
   `ipf-cli-config`.
+- Jumphost services have been renamed from `jumphost@<ID>.service` to
+  `ipf-jumphost@<ID>.service` (adding the `ipf-` prefix).
 
 ### Experimental Features
 
