ST-323 Change 'First Boot Wizard' to 'IPF CLI Config'

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -35,8 +35,8 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   when it fails on authentication) in **Settings --> Discovery & Snapshots -->
   Discovery Settings --> Advanced CLI** now has an increased maximum value. It
   can be set up to 5 retries.
-- The `nimpee-net-config` command for the initial configuration has changed to
-  `ipf-cli-config`.
+- The `nimpee-net-config` command for the First Boot Wizard has changed to
+  `ipf-cli-config`. Also, the First Boot Wizard is now known as IPF CLI Config.
 - Jumphost services have been renamed from `jumphost@<ID>.service` to
   `ipf-jumphost@<ID>.service` (adding the `ipf-` prefix).
 
