DOS-1522 rename nimpee-api to ipf-api

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -52,7 +52,7 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Vendor API configuration now has two additional fields -- `slug` (**required**) and `comment` (optional). See the [API section](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/index.md#slug-and-comment) for more information.
   - During the upgrade the required field `slug` will be auto-generated for all current configured API providers.
 - Clearing the database while keeping application settings no longer removes API tokens from the database.
-- SSO configuration now allows for the use of `roleName` in the `/opt/nimpee/conf.d/api.json` file. Please see [Single Sign On (SSO)](../../IP_Fabric_Settings/administration/sso.md).
+- SSO configuration now allows for the use of `roleName` in the `/opt/ipf-api/conf.d/api.json` file. Please see [Single Sign On (SSO)](../../IP_Fabric_Settings/administration/sso.md).
   - It is recommended to migrate from `roleId` to `roleName` for consistency and human readability.
 - During the upgrade, all snapshots -- including locked snapshots -- will be unloaded. Once the upgrade is completed, please load an existing snapshot, or perform a new discovery to populate network data in IP Fabric.
 - String table columns now support case insensitive regular expression operator and its negation.
