ST-285 Releases - Improve 'Overview', `6.8` RN, and `6.9` RN with suggestions from chatbot

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -10,13 +10,42 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
+--8<-- "snippets/6.6.3_online_upgrade_issue.md"
+
+--8<-- "snippets/upgrade_version_policy.md"
+
+--8<-- "snippets/clear_browser_cache.md"
+
+### Upgrade Notices
+
+- During the update process, locked snapshots will be unloaded together with
+  other snapshots, and their locks will be preserved. Therefore, such snapshots
+  won't be deleted by snapshot retention.
+- The upgrade to version `6.9` may break custom SSO integrations and will
+  require a change to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release,
+  we are omitting the minor API version for SSO configuration, and only the
+  major version will need to be changed with the next major IP Fabric version.
+  Simply replace the `vX.Y` string in this file with `v6` and then run
+  `systemctl restart ipf-dex`.
+
+  ```yaml
+  staticClients:
+    - id: ipfabric
+      redirectURIs:
+        - "https://demo1.eu.ipfabric.io/api/v6/auth/external/azure"
+  ```
+
+  For more information, please refer to the
+  [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
+  If you would like assistance, please contact your Solution Architect.
+
 ## v6.9.0 (UNRELEASED)
 
 ### Authentication
 
 `accessToken` and `refreshToken` have been removed from the response body of all
 endpoints (`/auth/login`, `/auth/token`, and `/auth/token/swap`) as a security
-fix, enhancing protection against XSS attacks. If you use this authentication
+enhancement to protect against XSS attacks. If you use this authentication
 method in your scripts, please update them to use the `Set-Cookie` headers. For
 more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 
@@ -42,10 +71,10 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 
 ### Experimental Features
 
-Newly added features which need to be explicitly enabled in service files. If
+Newly added features that need to be explicitly enabled in service files. If
 you are interested in trying them out, please contact our Support or Solution
-Architect team and we will gladly help you with enabling these features.
+Architect team, and we will gladly help you with enabling these features.
 
 - VeloCloud
-  - Basic device info support was added as PoC and needs to be enabled manually.
-    (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`)
+  - Basic device info support was added as Proof of Concept (PoC) and needs to
+    be enabled manually (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
