--- a/docs/releases/release_notes/6.8.md
+++ b/docs/releases/release_notes/6.8.md
@@ -13,19 +13,20 @@ description: In this section, you can find the release notes for v6.8 releases.
 ### Upgrade Notices
 
 - During the update process, locked snapshots will be unloaded together with
-  other snapshots and their lock will be preserved. Therefore, such snapshots
+  other snapshots, and their locks will be preserved. Therefore, such snapshots
   won't be deleted by snapshot retention.
-- Upgrade to `6.8` may break custom SSO integrations and will require a change
-  to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release, we are omitting minor
-  API version for SSO configuration, and only major version will need to be
-  changed with the next major IP Fabric version. Simply replace the `vX.Y` string in
-  this file with `v6` and then run `systemctl restart ipf-dex`.
+- The upgrade to version `6.8` may break custom SSO integrations and will
+  require a change to the `/etc/ipf-dex.yaml` file. Since the `6.3.2` release,
+  we are omitting the minor API version for SSO configuration, and only the
+  major version will need to be changed with the next major IP Fabric version.
+  Simply replace the `vX.Y` string in this file with `v6` and then run
+  `systemctl restart ipf-dex`.
 
   ```yaml
   staticClients:
     - id: ipfabric
       redirectURIs:
-        - "https://demo1.eu.ipfabric.io/api/vX/auth/external/azure"
+        - "https://demo1.eu.ipfabric.io/api/v6/auth/external/azure"
   ```
 
   For more information, please refer to the
@@ -48,7 +49,7 @@ MD5 (ipfabric-6-8-6+0.vmdk) = cfd14bc55cd02259a6be3d4178c470d4
 ### Security Fixes
 
 - Fixed the issue with Vendor API clients logging sensitive data when the
-  sensitive data contained a regex special character (e.g., `\t`, `\b`, `\d`, 
+  sensitive data contained a regex special character (e.g., `\t`, `\b`, `\d`,
   `\w`, etc.).
 
 ## v6.8.4 (May 14th, 2024; GA)
@@ -66,17 +67,27 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
 
 ### Network Discovery
 
-- Combined API + CLI discovery support for SD-WAN vendors [Versa](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md) and [Viptela](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
-  - If combined discovery is enabled, routing tables are downloaded via CLI to avoid big data transfers over the controller. The discovery time should be improved.
-  - After finishing all API calls, IP Fabric tries to connect to one of the device IPs (the default limit is 10 IPs, now configurable with IP Fabric Support). Credentials from the global discovery settings are used. If the device is not reachable, the routing table won't be downloaded.
-- Azure -- The issue with multiple subcriptions has been fixed. Multiple subscriptions can now be specified and will be correctly discovered.
+- Combined API+CLI discovery support for SD-WAN vendors
+  [Versa](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md)
+  and
+  [Viptela](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md#cisco-viptela-sd-wan)
+  - If combined discovery is enabled, routing tables are downloaded via CLI to
+    avoid large data transfers over the controller, improving discovery time.
+  - After completing all API calls, IP Fabric attempts to connect to one of the
+    device IPs (default limit is 10 IPs, now configurable with IP Fabric
+    Support). Credentials from the global discovery settings are used. If the
+    device is not reachable, the routing table won't be downloaded.
+- Azure -- The issue with multiple subcriptions has been fixed. Multiple
+  subscriptions can now be specified and will be correctly discovered.
 - Silver Peak (HPE Aruba EdgeConnect) -- Stale ARP records are stored due to a
   very short expiration time (TTL).
 - HPE Citrix Aruba CX -- Support for Policy-Based Routing was added.
 - Fortinet FortiSwitch
-  - It is not necessary to enable it manually (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`) anymore.
+  - It is no longer necessary to enable it manually
+    (`ENABLE_DISCOVERY_DEVICES_FORTISWITCH`).
   - Support for MCLAG and transceivers was added.
-- Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on interfaces was added.
+- Cisco (NX-OS, IOS-XR, ACI, ASA, FTD, IOS, IOS-XE) -- Support for bandwidth on
+  interfaces was added.
 
 ### New CIDR Operators for Table Routing Columns
 
@@ -88,30 +99,36 @@ MD5 (ipfabric-6-8-4+0.vmdk) = 4da10b0f213a6af0c1c88982115f4dbe
   - overlaps (API: `sect`, UI: `@`)
   - does not overlap (API: `nsect`, UI: `!@`)
 - All new operators take IPv4 CIDR as a value.
-- The operators are available for IPv4 routing table columns (e.g., in **Technology --> Routing --> Routes**).
-- The operators can be used for table data filtering and in intent verification rule definitions.
+- These operators are available for IPv4 routing table columns (e.g., in
+  **Technology --> Routing --> Routes**).
+- They can be used for filtering table data and in defining intent verification
+  rules.
 
 ### Other Changes
 
 - Discovery error detection and reporting have been improved.
-  - In a snapshot's **Summary of Issues**, any Vendor API discovery failure
-    is now being reported (for example, due to missing/wrong
-    credentials):<br/>
+  - In a snapshot's **Summary of Issues**, any Vendor API discovery failure is
+    now being reported (for example, due to missing/wrong credentials):<br/>
     ![Failed Vendor APIs](6.8_failed_vendor_apis.png)
-- `Device Change` dashboard widget -- The `Number of Changes` axis' scale has
-  been changed from linear to logarithmic. This adjustment should improve
-  visualization overall and prevent confusion with scale in certain cases.
-- You can now update device attributes on an existing snapshot from global settings in
-  **Discovery Snapshot --> Settings --> Device Attributes**. This action fully replaces
-  all attributes on the snapshot.
-- You can filter [Disabled Discovery Tasks](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md) by device's Serial Number. This should help with targeting specific devices.
-- In Table Description, there's a link to a separate page with the API documentation. Additionally, we've ensured that the information in our API documentation accurately reflects the behavior of our endpoints.
+- `Device Change` dashboard widget -- The scale of the `Number of Changes` axis
+  has been changed from linear to logarithmic. This adjustment should improve
+  visualization overall and prevent scale confusion in certain cases.
+- You can now update device attributes in an existing snapshot from the global
+  settings in **Discovery Snapshot --> Settings --> Device Attributes**. This
+  action fully replaces all attributes in the snapshot.
+- You can filter
+  [Disabled Discovery Tasks](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/disabled_discovery_tasks.md)
+  by a device's Serial Number. This should help in targeting specific devices.
+- In Table Description, there's a link to a separate page with the API
+  documentation. Additionally, we've ensured that the information in our API
+  documentation accurately reflects the behavior of our endpoints.
 - `callhome.ipfabric.io` has changed its IP address from `95.217.156.217` to
   `65.109.166.252`.
   - It is needed for
     [upgrading IP Fabric over the internet](../../System_Administration/System_Administration_UI/system_update.md#online-update)
     (along with `releases.ipfabric.io`) and
-    [sending diagnostics (parsing errors)](../../support/index.md#callhome) to us.
-  - If you want to use the mentioned functionalities, please allowlist the FQDN
-    `callhome.ipfabric.io` instead of the IP address `65.109.166.252`, as the IP
-    address is subject to change.
+    [sending diagnostics (parsing errors)](../../support/index.md#callhome) to
+    us.
+  - If you intend to use the mentioned functionalities, please allowlist the
+    FQDN `callhome.ipfabric.io` instead of the IP address `65.109.166.252`, as
+    IP addresses are subject to change.
