DOS-1006 7.0 RN - Slightly polish note regarding zstd being used for techsupport

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -20,6 +20,5 @@ tags: ["draft"]
 
 ### Other Changes
 
-- The techsupport archive generation has switched from `gzip` compresssion to
-  `zstd` for improved speed and compression ratio.
-
+- Techsupport files are now compressed with `zstd` instead of `gzip` for
+  improved speed and compression ratio.
