MQ-4123: Release 6.9.4 for General Availability (GA)

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -1,6 +1,5 @@
 ---
 description: In this section, you can find the release notes for v6.9 releases.
-tags: ["draft"]
 ---
 
 # IP Fabric v6.9
@@ -39,7 +38,18 @@ tags: ["draft"]
   [SSO documentation](../../IP_Fabric_Settings/administration/sso.md#sso-configuration-ipf-dexyaml).
   If you would like assistance, please contact your Solution Architect.
 
-## v6.9.0 (UNRELEASED)
+## v6.9.4 (July 19th, 2024; GA)
+
+```
+SHA256 (ipfabric-update-6-9-4+0.tar.gz.sig) = 64768d1fc7b9a7d947eadca2961278e147437198dca5783b2cb8c9dc88396f65
+MD5 (ipfabric-update-6-9-4+0.tar.gz.sig) = 5dd4eccbeaf57401061f7bc556908d46
+SHA256 (ipfabric-6-9-4+0.ova) = cdb28224c0829610be26e657bcd7f8c88316b281c28a7db83ec5c3801ba88460
+MD5 (ipfabric-6-9-4+0.ova) = cbb9b69afaae71647d6840603dfe08fa
+SHA256 (ipfabric-6-9-4+0.qcow2) = 18f8abb587c04f1aaa96a0b3bb426fc9e4dec2ea9b7784bb840399393a777e62
+MD5 (ipfabric-6-9-4+0.qcow2) = 2524ee52363ba8d6a7a55541e2645e25
+SHA256 (ipfabric-6-9-4+0.vmdk) = 75d5e7c6806c1506113e93732d7284e177fe2b223e3b61f9c9b14a09bab22e89
+MD5 (ipfabric-6-9-4+0.vmdk) = cbec5f2e35f9b2231e7e924ee9a3595b
+```
 
 ### Authentication
 
