--- a/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.6.x/6.6.0.md
@@ -74,7 +74,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8724` -- Medium -- Make SSH/Telnet port settings part of snapshot settings
 - `NIM-9703` -- Medium -- Cisco APIC - add support for LLDP neighbors
 - `NIM-9864` -- Medium -- AAA - Palo Alto - pan-os
-- `NIM-12019` -- Low -- Email Still required for creating admin user
+- `NIM-12019` -- Medium -- Remove e-mail field from creating admin user
 - `NIM-12108` -- Medium -- Migrate Device Credentials tables
 - `NIM-12147` -- Medium -- Migrate Management/Configuration
 - `NIM-12149` -- Medium -- Palo Alto DHCPv4 Server Support
