--- a/docs/releases/release_notes_low-level/6.x/6.8.x/6.8.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.8.x/6.8.0.md
@@ -4,7 +4,7 @@ description: IP Fabric automatically generated low-level release notes for versi
 
 # LLRN 6.8.0
 
-These are low-level release notes for IP Fabric release `6.8.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 141 issues.
+These are low-level release notes for IP Fabric release `6.8.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 147 issues.
 
 ## Epics
 
@@ -74,11 +74,17 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-14094` -- Highest -- `nimpee-api` service does not honor ENV variables
 - `NIM-14104` -- Medium -- Fortigate - Interfaces duplicated on each virtual context
 - `NIM-14119` -- Medium -- Cisco FMC Vendor API - Token is not decrypted prior to sending it to the API Server
+- `NIM-14121` -- High -- Juniper Mist - no devices discovery fix
 - `NIM-14122` -- Medium -- Slow response when opening `Site Low Level Design`
 - `NIM-14124` -- Highest -- Unable to upgrade over internet from 6.6.3 and higher version
 - `NIM-14127` -- Medium -- Jupee-errors: brocade-fastiron commands/brocade/_fastiron/ipInterfaceDetail
 - `NIM-14132` -- Medium -- TypeError - Do not know how to serialize a BigInt
+- `NIM-14136` -- Medium -- Callhome-bugfix: arista 6.6.1-1 commands/arista/_eos/ntp
+- `NIM-14141` -- Medium -- Part Numbers - information missing for Alcatel
 - `NIM-14143` -- Medium -- Palo Alto - interface descriptions are missing
+- `NIM-14161` -- Medium -- Callhome-bugfix: arista 6.5.0-10 commands/arista/_eos/switchport
+- `NIM-14164` -- Medium -- Callhome-bugfix: paloalto 6.6.1-1 commands/paloalto/_panos/requestLicenseInfo
+- `NIM-14165` -- Medium -- Aruba 635 APs not being discovered due to being incorrectly detected as family "aruba" and not "aruba-iap"
 - `NIM-14166` -- Medium -- Callhome-bugfix: azure 6.6.1-1 commands/azure/virtualNetworkGateways
 - `NIM-14176` -- High -- Invalid input error when starting discovery for one more IP in an existing snapshot
 - `NIM-14208` -- Medium -- Cisco APIC - API data not being mapped correctly
