--- a/docs/releases/release_notes_low-level/6.x/6.8.x/6.8.6.md
+++ b/docs/releases/release_notes_low-level/6.x/6.8.x/6.8.6.md
@@ -10,6 +10,6 @@ These are low-level release notes for IP Fabric release `6.8.6`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- `NIM-14560` -- Medium -- IOS XR Command timeout on "admin show inventory all" - issue with paging
 - `NIM-14718` -- Medium -- Versa hybrid discovery - wrong seed IPs
 - `NIM-14731` -- High -- Username and password put in plaintext on tasker logs for several Vendor APIs if they contain a backslash
+- `NIM-14971` -- Medium -- Callhome-bugfix: cisco 6.5.0-10 commands/cisco/interfaces/countersStormControl
