--- a/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.3.x/6.3.0.md
@@ -4,7 +4,7 @@ description: IP Fabric automatically generated low-level release notes for versi
 
 # LLRN 6.3.0
 
-These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 582 issues.
+These are low-level release notes for IP Fabric release `6.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release of IP Fabric contains a total of 583 issues.
 
 ## Epics
 
@@ -518,6 +518,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-11349` -- Medium -- add non 200 response schemas
 - `NIM-11489` -- Medium -- Forcepoint API - change `maxConcurrentRequests` default limit
 - `DOS-407` -- Medium -- nimpee-install-2.0 - Remove mongo DB from build scripts and existing installations
+- `DOS-647` -- Medium -- nimpee-install-2.0: improve ova distribution
 
 ## Sub-Tasks
 
