ST-324 Advanced CLI - Update screenshot with new options `Network device authentication timeout` and `Command response timeout`

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -65,10 +65,17 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
 
 ### Other Changes
 
-- The **Authentication failure** field (how many times to retry a connection
-  when it fails on authentication) in **Settings --> Discovery & Snapshots -->
-  Discovery Settings --> Advanced CLI** now has an increased maximum value. It
-  can be set up to 5 retries.
+- **Settings --> Discovery & Snapshots --> Discovery Settings --> Advanced CLI
+  --> CLI Settings**
+  - The **Authentication failure** field (how many times to retry a connection 
+    when it fails on authentication) now has an increased maximum value (5,
+    previously 2). The default value is still 0.
+  - The option to amend **Network device authentication timeout** (how many
+    seconds to wait for the login prompt to appear) was added. The default value 
+    is 300 seconds.
+  - The option to amend **Command response timeout** (how many minutes to wait
+    for a device to finish sending the response to a command) was added. The
+    default value is 180 minutes.
 - The `nimpee-net-config` command for the First Boot Wizard has changed to
   `ipf-cli-config`. Also, the First Boot Wizard is now known as IPF CLI Config.
 - Jumphost services have been renamed from `jumphost@<ID>.service` to
