--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -46,6 +46,14 @@ SHA256 (ipfabric-6-9-4+0.vmdk) = 75d5e7c6806c1506113e93732d7284e177fe2b223e3b61f
 MD5 (ipfabric-6-9-4+0.vmdk) = cbec5f2e35f9b2231e7e924ee9a3595b
 ```
 
+### Security Fixes
+
+- Fixed the issue with enable passwords being logged in plaintext in the CLI log
+  while discovering Opengear devices with the `Neighbors` task enabled. For
+  details and remediation, please see 
+  [NIM-13396: Opengear – Prevent `sudo` Password From Being Logged](../../support/security_bulletins.md#nim-13396-opengear-prevent-sudo-password-from-being-logged)
+  in our Security Bulletin.
+
 ### Authentication
 
 `accessToken` and `refreshToken` have been removed from the response body of all
