--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -5,7 +5,7 @@ tags: ["draft"]
 
 # IP Fabric v7.0
 
-!!! danger "Unreleased version"
+!!! danger "Unreleased Version"
 
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
