--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -84,6 +84,12 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   - The option to amend **Command response timeout** (how many minutes to wait
     for a device to finish sending the response to a command) was added. The
     default value is 180 minutes.
+- **Settings --> Discovery & Snapshots --> Discovery Settings --> Device
+  Credentials**
+  - Usernames & passwords accept ASCII printable characters only.
+- **Discovery Snapshot --> (specific snapshot) --> Settings --> Device
+  Credentials**
+  - Usernames & passwords accept ASCII printable characters only.
 - **Inventory --> Devices --> Device Details**
   - The option to download device data in JSON format was added.
 - The `nimpee-net-config` command for the First Boot Wizard has changed to
