NIM-12128 7.0 RN - Document `f` alias for `filters` no longer being supported in table URLs

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -18,6 +18,14 @@ tags: ["draft"]
 
 ## v7.0.0 (UNRELEASED)
 
+### Frontend
+
+- Support for `f` as an alias for `filters` in table URLs has been dropped.
+  - This URL is **no longer** supported:<br/>
+    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+  - This URL is supported:<br/>
+    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+
 ### Other Changes
 
 - Techsupport files are now compressed with `zstd` instead of `gzip` for
