NIM-14131 Add release note about no need to reenter vendor api credentials

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -71,6 +71,12 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   [Fortinet SD-WAN Known Issues](../../support/known_issues/Vendors/fortinet/sdwan.md).
 - Overloaded server detection for HTTP/HTTPS-based Vendor APIs was improved.
 
+### Frontend
+
+#### Simplified Vendor API Credential Management
+- In this release, we’ve streamlined the process for managing Vendor API credentials.
+  Now, when editing Vendor API settings, it is no longer needed to re-enter credentials each time.
+
 ### Other Changes
 
 - **Settings --> Discovery & Snapshots --> Discovery Settings --> Advanced CLI
