DOS-1053: ipf-cli-config

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -32,7 +32,9 @@ tags: ["draft"]
   improved speed and compression ratio.
 - [Duplicate IPs Discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md),
   configured since the `6.4` release using the environment variable
-  `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, has been promoted to a product 
+  `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, has been promoted to a product
   feature and can now be set directly in GUI.
-  - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you 
+  - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you
     will have to manually set the subnets in the GUI again.
+- `nimpee-net-config` was renamed to `ipf-cli-config`
+- `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
