NIM-13156 7.0 RN - Adds experimental features section and adds page for VeloCloud

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -38,3 +38,12 @@ tags: ["draft"]
     will have to manually set the subnets in the GUI again.
 - `nimpee-net-config` was renamed to `ipf-cli-config`
 - `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
+
+### Experimental Features
+
+Newly added features that need to be explicitly enabled in service files. If
+you are interested in trying them out, please contact our Support or Solution
+Architect team, and we will gladly help you with enabling these features.
+
+- VeloCloud
+  - VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags/#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
