--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -102,6 +102,20 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   `ipf-cli-config`. Also, the First Boot Wizard is now known as IPF CLI Config.
 - Jumphost services have been renamed from `jumphost@<ID>.service` to
   `ipf-jumphost@<ID>.service` (adding the `ipf-` prefix).
+- Path-lookup topology improvements:
+  - neighbor calculation in STP over ACI scenarios,
+  - fixed host-to-gateway simulation for wireless hosts connected to AP,
+  - more realistic handling of VRF leaks in BGP routes.
+- Path-lookup security & ACI improvements:
+  - more accurate security evaluation for tunnels using zone firewalls,
+  - improved handling of source & destination groups in ACI ACL rules,
+  - improved handling of VXLAN network identifiers (VNI's) in output security evaluation,
+- DB performance improvements:
+  - memory optimizations when saving STP edges,
+  - sped up VLAN-related DB queries.
+- Added start and end timestamps of individual device discovery, data shown
+  in new columns of **Inventory --> Devices** table:
+  ![Discovery Timestamps](./6.9/discovery-timestamps.png)
 
 ### Experimental Features
 
