NIM-15340 Check Point - Update docs and 7.0 RN with new pep command

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -18,6 +18,12 @@ tags: ["draft"]
 
 ## v7.0.0 (UNRELEASED)
 
+### Network Discovery
+
+- Check Point -- Identity awareness collecting was updated with a new extended
+  command. For more details, see 
+  [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md).
+
 ### Frontend
 
 - Support for `f` as an alias for `filters` in table URLs has been dropped.
