Backport 6.9 RN updates to `release/6.9` branch

--- a/docs/releases/release_notes/6.9.md
+++ b/docs/releases/release_notes/6.9.md
@@ -102,6 +102,20 @@ more details, see [Token API](../../IP_Fabric_API/authentication.md#token-api).
   `ipf-cli-config`. Also, the First Boot Wizard is now known as IPF CLI Config.
 - Jumphost services have been renamed from `jumphost@<ID>.service` to
   `ipf-jumphost@<ID>.service` (adding the `ipf-` prefix).
+- Path-lookup topology improvements:
+  - neighbor calculation in STP over ACI scenarios,
+  - fixed host-to-gateway simulation for wireless hosts connected to AP,
+  - more realistic handling of VRF leaks in BGP routes.
+- Path-lookup security & ACI improvements:
+  - more accurate security evaluation for tunnels using zone firewalls,
+  - improved handling of source & destination groups in ACI ACL rules,
+  - improved handling of VXLAN network identifiers (VNI's) in output security evaluation,
+- DB performance improvements:
+  - memory optimizations when saving STP edges,
+  - sped up VLAN-related DB queries.
+- Added start and end timestamps of individual device discovery, data shown
+  in new columns of **Inventory --> Devices** table:
+  ![Discovery Timestamps](./6.9/discovery-timestamps.png)
 
 ### Experimental Features
 
@@ -112,3 +126,25 @@ Architect team, and we will gladly help you with enabling these features.
 - VeloCloud
   - Basic device info support was added as Proof of Concept (PoC) and needs to
     be enabled manually (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+
+### Known Issues
+
+#### Failing Upgrade to Version `6.9.4`
+
+A bug was identified on IP Fabric appliances with initial deployment versions
+`4.3.x` and earlier.
+
+During the upgrade process to version `6.9.4`, the installation of the
+`ipf-ethx` package fails, causing the entire upgrade process to stop.
+
+This issue was fixed as part of the `6.9.6` release.
+
+#### Bug Affecting Online Upgrade in Versions `6.9.4` and `6.9.6`
+
+A critical bug was identified in the `6.9.4` and `6.9.6` releases, impacting the
+online upgrade process to the next release. As a result, only manual upgrades
+are possible for the affected versions.
+
+Versions `6.8.x` and earlier remain unaffected by this issue.
+
+This issue was fixed as part of the `6.9.7` release.
