--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -31,6 +31,10 @@ tags: ["draft"]
     `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
   - This URL is supported:<br/>
     `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+- Added support for
+  [URL links that point to a specific snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
+- Links to tables can now be shared
+  [with a snapshot ID and full filter representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
 ### Other Changes
 
@@ -52,4 +56,4 @@ you are interested in trying them out, please contact our Support or Solution
 Architect team, and we will gladly help you with enabling these features.
 
 - VeloCloud
-  - VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags/#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+  - VeloCloud discovery has been enhanced with basic networking support. To enable VeloCloud discovery, you must [manually activate the feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
