DOS-1471: add docker into appliance

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -21,7 +21,7 @@ tags: ["draft"]
 ### Network Discovery
 
 - Check Point -- Identity awareness collecting was updated with a new extended
-  command. For more details, see 
+  command. For more details, see
   [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md).
 
 ### Frontend
@@ -48,6 +48,7 @@ tags: ["draft"]
     will have to manually set the subnets in the GUI again.
 - `nimpee-net-config` was renamed to `ipf-cli-config`
 - `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
+- `docker` runtime was added to the appliance.
 
 ### Experimental Features
 
