DOS-1156: postgresql 15 is now shipped with the appliance

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -49,6 +49,7 @@ tags: ["draft"]
 - `nimpee-net-config` was renamed to `ipf-cli-config`
 - `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
 - `docker` runtime was added to the appliance.
+- PostgreSQL 15 was added to the appliance.
 
 ### Experimental Features
 
