NIM-14778: Add Versa Backup to 7.0 release notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -36,6 +36,12 @@ tags: ["draft"]
 - Links to tables can now be shared
   [with a snapshot ID and full filter representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
+### Configuration Management
+
+#### Versa
+
+- Support for configuration backup was added for Versa devices when the discovery is running in [Combined (CLI+API) discovery mode](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
+
 ### Other Changes
 
 - Techsupport files are now compressed with `zstd` instead of `gzip` for
