NIM-15498: Update API endpoints in release notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -10,13 +10,34 @@ tags: ["draft"]
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
---8<-- "snippets/6.6.3_online_upgrade_issue.md"
-
 --8<-- "snippets/upgrade_version_policy.md"
 
 --8<-- "snippets/clear_browser_cache.md"
 
 ## v7.0.0 (UNRELEASED)
+
+### Breaking Changes
+
+#### API Endpoint Changes
+
+Several API endpoints have been updated or removed in this major release.
+
+##### Replaced Endpoints
+
+- `technology/sdwan/links` has been replaced by `technology/sdwan/versa/links`
+- `technology/sdwan/sites` has been replaced by `technology/sdwan/versa/sites`
+- `technology/load-balancing/f5-partitions` has been replaced by `technology/load-balancing/partitions`
+- `technology/mpls/l2vpn/curcit-cross-connect` has been replaced by `technology/mpls/l2vpn/circuit-cross-connect`
+
+##### Removed Endpoints
+
+The following endpoints have been permanently removed:
+
+- `technology/networks/domain`
+- `technology/spanning-tree/radius`
+- `technology/spanning-tree/topology`
+- `technology/addresing/path-lookup-sources`
+- `technology/attributes/summary`
 
 ### Network Discovery
 
