DOS-1470: tooling to re-enable debian repositories

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -77,6 +77,8 @@ The following endpoints have been permanently removed:
 - `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
 - `docker` runtime was added to the appliance.
 - PostgreSQL 15 was added to the appliance.
+- New script in `/opt/ipf-debian-repositories/bin/ipf-debian-repositories.sh` can be
+ [used to re-enable Debian repositories](../../System_Administration/Command_Line_Interface/How_to/add_system_repositories.md).
 
 ### Experimental Features
 
