NIM-15178 Advanced site separation

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -41,9 +41,23 @@ The following endpoints have been permanently removed:
 
 ### Network Discovery
 
+#### Vendor Support
+
 - Check Point -- Identity awareness collecting was updated with a new extended
   command. For more details, see
   [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md).
+
+#### Improvements
+
+- [Site Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md)
+  functionality using regular expressions was improved with the option
+  to build advanced **Site Name** values using template strings.
+- [Duplicate IPs Discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md),
+  configured since the `6.4` release using the environment variable
+  `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, has been promoted to a product
+  feature and can now be set directly in GUI.
+  - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you
+    will have to manually set the subnets in the GUI again.
 
 ### Frontend
 
@@ -67,12 +81,6 @@ The following endpoints have been permanently removed:
 
 - Techsupport files are now compressed with `zstd` instead of `gzip` for
   improved speed and compression ratio.
-- [Duplicate IPs Discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md),
-  configured since the `6.4` release using the environment variable
-  `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, has been promoted to a product
-  feature and can now be set directly in GUI.
-  - If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you
-    will have to manually set the subnets in the GUI again.
 - `nimpee-net-config` was renamed to `ipf-cli-config`
 - `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous proxy
 - `docker` runtime was added to the appliance.
