Move frontend 7.0 breaking change to BC section

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -39,6 +39,17 @@ The following endpoints have been permanently removed:
 - `technology/addresing/path-lookup-sources`
 - `technology/attributes/summary`
 
+#### Removed alias `f` in URLs
+
+- Support for `f` as an alias for `filters` in table URLs has been dropped.
+  - This URL is **no longer** supported:
+
+    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+
+  - This URL remains supported:
+
+    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+
 ### Network Discovery
 
 #### Vendor Support
@@ -61,11 +72,8 @@ The following endpoints have been permanently removed:
 
 ### Frontend
 
-- Support for `f` as an alias for `filters` in table URLs has been dropped.
-  - This URL is **no longer** supported:<br/>
-    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
-  - This URL is supported:<br/>
-    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+#### Sharable links 
+
 - Added support for
   [URL links that point to a specific snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
 - Links to tables can now be shared
