Breaking column changes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -39,6 +39,25 @@ The following endpoints have been permanently removed:
 - `technology/addresing/path-lookup-sources`
 - `technology/attributes/summary`
 
+#### Changes in columns
+
+##### Removed Column
+
+The `mac` column in the Device Inventory table (`/tables/inventory/devices`) has been removed.
+
+##### Replaced Columns
+
+The following column names have been changed:
+
+- `/tables/management/ntp/summary`: `reachableSources` -> `synchronizedSources`
+- `/tables/management/ntp/sources`: `reachable` -> `sync`
+
+!!! info "NTP Synchronization Status"
+
+    It was determined that some vendors report a reachable status along with a synchronization
+    status causing the data to incorrectly mark some sources as not reachable.  These columns
+    were renamed to more accurately describe their property.
+
 #### Removed alias `f` in URLs
 
 - Support for `f` as an alias for `filters` in table URLs has been dropped.
