RN remove properties in endpoints

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -39,6 +39,11 @@ The following endpoints have been permanently removed:
 - `technology/addresing/path-lookup-sources`
 - `technology/attributes/summary`
 
+##### Removed Properties in Endpoints
+
+- `networks/policies/routing/interfaces` removed property `status`
+- `inventory/devices` removed property `mac`
+
 #### Changes in columns
 
 ##### Removed Column
